# vc2hqdecode

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  doxygen.cfg  vc2hqdecode-uninstalled.pc.in  vc2hqdecode.pc.in
WINDOWS/vc2hqdecoder/: vc2hqdecoder.sln
WINDOWS/vc2hqdecoder/vc2decode/: ReadMe.txt  vc2decode.vcxproj  vc2decode.vcxproj.filters
WINDOWS/vc2hqdecoder/vc2decodertest/: ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h  vc2decodertest.vcxproj  vc2decodertest.vcxproj.filters
WINDOWS/vc2hqdecoder/vc2hqdecoder/: ReadMe.txt  dllmain.cpp  stdafx.h  targetver.h  vc2hqdecoder.vcxproj  vc2hqdecoder.vcxproj.filters
WINDOWS/vc2hqdecoder/vc2inversetransform_c/: ReadMe.txt  vc2inversetransform_c.vcxproj  vc2inversetransform_c.vcxproj.filters
WINDOWS/vc2hqdecoder/vc2inversetransform_sse4_2/: ReadMe.txt  vc2inversetransform_sse4_2.vcxproj  vc2inversetransform_sse4_2.vcxproj.filters
common/: attributes.h
redist/: threadbarrier.hpp
testprogs/: Makefile.am  vc2decode.cpp
testsuite/: Makefile.am  randomiser.cpp  randomiser.hpp  test_dequantise.cpp  test_invtransform.cpp  tests.cpp  tests.hpp
tools/: Makefile.am  psnr_calculator  vc2streamdebugger  viddiff
vc2hqdecode/: Makefile.am  ThreadPool.hpp  VC2Decoder.cpp  VC2Decoder.hpp  VideoFormat.hpp  datastructures.hpp  debug.hpp  dequantise.hpp  internal.h  invtransform.hpp  logger.cpp  logger.hpp  lut.hpp  platform_variant.hpp  quantmatrix.cpp  stream.cpp  stream.hpp  vc2hqdecode.cpp  vc2hqdecode.h  vc2hqdecodestrings.h  vlc.hpp
vc2inversetransform_c/: Makefile.am  dequantise_c.cpp  dequantise_c.hpp  deslauriers_dubuc_13_7_invtransform.hpp  deslauriers_dubuc_9_7_invtransform.hpp  fidelity_invtransform.hpp  haar_invtransform.hpp  invtransform_c.cpp  invtransform_c.hpp  legall_invtransform.hpp  vlc_c.cpp  vlc_c.hpp
vc2inversetransform_sse4_2/: Makefile.am  dequantise_sse4_2.cpp  dequantise_sse4_2.hpp  haar_invtransform.hpp  invtransform_sse4_2.cpp  invtransform_sse4_2.hpp  legall_invtransform.hpp  vlc_sse4_2.cpp  vlc_sse4_2.hpp
